Bug 352748 - Umbrello add's 'package' stereotype after converting a class-or-package stereotyped uml object to package
Summary: Umbrello add's 'package' stereotype after converting a class-or-package stere...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.14.1 (KDE Applications 4.14.1)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-15 14:52 UTC by Ralf Habacker
Modified: 2015-12-16 18:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.17.2 (KDE Applications 15.08.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-09-15 14:52:07 UTC
With bug 336012 umbrello got a feature to retype an uml object which could not be clearly identified as class or package on c++ import  to a package by a context menu entry.

After retyping the package gets a 'package' stereotype which is obsolate and should be removed




Reproducible: Always

Steps to Reproduce:
1. create a file named test.h with the following content
    class Test { Test(MyTestType::MyTest a); }; 
2. start umbrello
3. import test.h
4. select tree view Item named MyTestType and select right-mouse-click->change into package


Actual Results:  
The resulting package contains a stereotype "package"

Expected Results:  
The stereotype should be removed.
Comment 1 Ralf Habacker 2015-09-15 14:53:38 UTC
Git commit 9631f8703c1f54e523e8b1c43f253d4011fccd76 by Ralf Habacker.
Committed on 15/09/2015 at 14:53.
Pushed by habacker into branch 'Applications/15.08'.

Fix 'Umbrello add's 'package' stereotype after converting a class-or-package stereotyped uml object to package'.
FIXED-IN:2.17.2 (KDE Applications 15.08.2)

M  +1    -1    umbrello/classifier.cpp

http://commits.kde.org/umbrello/9631f8703c1f54e523e8b1c43f253d4011fccd76
Comment 2 Ralf Habacker 2015-12-16 18:48:14 UTC
Git commit e083425eea587a49c4eb8d162ccbf13f377dd394 by Ralf Habacker.
Committed on 16/12/2015 at 18:15.
Pushed by habacker into branch 'frameworks'.

Fix 'Umbrello add's 'package' stereotype after converting a class-or-package stereotyped uml object to package'.
FIXED-IN:2.17.2 (KDE Applications 15.08.2)

M  +1    -1    umbrello/umlmodel/classifier.cpp

http://commits.kde.org/umbrello/e083425eea587a49c4eb8d162ccbf13f377dd394