Fix 'Umbrello add's 'package' stereotype after converting a class-or-package stereotyped uml object to package'.

BUG:352748
FIXED-IN:2.17.2 (KDE Applications 15.08.2)